fix(fu-436): fixed tooltip visibility on radio if label not truncated

--- a/projects/fusion-ui/components/radio/v3/radio.component.scss
+++ b/projects/fusion-ui/components/radio/v3/radio.component.scss
@@ -13,6 +13,8 @@
         align-items: center;
         gap: 8px;
 
+        @extend %truncate-flex-child;
+
         @extend %font-bodySmall;
         color: $fu-black-500;
         user-select: none;
